--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDbContextConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=1122"
+    //"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
+    "IdentityDbContextConnection": "Data Source=SQL5103.site4now.net;Initial Catalog=db_a9828b_studenthelper;User Id=db_a9828b_studenthelper_admin;Password=masterpass123"
   }
 }
