--- a/StudentHelper.Model/appsettings.json
+++ b/StudentHelper.Model/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "StudentHelperAuthConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=1122"
+    "StudentHelperAuthConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=password0000"
   }
 }
