--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -7,6 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDbContextConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=1122"
+    "IdentityDbContextConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=password0000"
+  },
+  "SMTPConfig": {
+    "ServerAddress": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "buyursa.kg@gmail.com",
+    "SenderPassword": "uqewgkwgzkhsirvx",
+    "EnableSsl": true,
+    "IsBodyHtml": true,
+    "UseDefaultCredentials": false
   }
 }
