--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -7,7 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
-    "IdentityDbContextConnection": "Data Source=SQL5103.site4now.net;Initial Catalog=db_a9828b_studenthelper;User Id=db_a9828b_studenthelper_admin;Password=masterpass123"
+//"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
+  "IdentityDbContextConnection": "Data Source=SQL5103.site4now.net;Initial Catalog=db_a9828b_studenthelper;User Id=db_a9828b_studenthelper_admin;Password=masterpass123"
+  },
+  "SMTPConfig": {
+    "ServerAddress": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "buyursa.kg@gmail.com",
+    "SenderPassword": "uqewgkwgzkhsirvx",
+    "EnableSsl": true,
+    "IsBodyHtml": true,
+    "UseDefaultCredentials": false
   }
 }
