changing to token auth

--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-//"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
-  "IdentityDbContextConnection": "Data Source=SQL5103.site4now.net;Initial Catalog=db_a9828b_studenthelper;User Id=db_a9828b_studenthelper_admin;Password=masterpass123"
+    //"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
+    "IdentityDbContextConnection": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9828b_studenthelp;User Id=db_a9828b_studenthelp_admin;Password=masterpass123"
   },
   "SMTPConfig": {
     "ServerAddress": "smtp.gmail.com",
@@ -18,5 +18,13 @@
     "EnableSsl": true,
     "IsBodyHtml": true,
     "UseDefaultCredentials": false
+  },
+  "JWT": {
+    "Expire": 60,
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "supirSickertikKeyyo@!773",
+    "TokenValidityInMinutes": 30,
+    "RefreshTokenValidityInDays": 7
   }
 }
