--- a/StudentHelper.Model/appsettings.json
+++ b/StudentHelper.Model/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "StudentHelperAuthConnection": "Host=localhost;Port=5432;Database=StudentHelperAuth;Username=postgres;Password=password0000"
+    "StudentHelperDatabase": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9828b_studenthelp;User Id=db_a9828b_studenthelp_admin;Password=masterpass123"
   }
 }
