--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"IdentityDbContextConnection": "Host=studenthelper.cjsom5y8rmyb.eu-north-1.rds.amazonaws.com;Port=5432;Database=StudentHelperAuth;Username=frez;Password=Super123!"
-    "IdentityDbContextConnection": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9828b_studenthelp;User Id=db_a9828b_studenthelp_admin;Password=masterpass123"
+    "StudentHelperDatabase": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9828b_studenthelp;User Id=db_a9828b_studenthelp_admin;Password=masterpass123"
   },
   "SMTPConfig": {
     "ServerAddress": "smtp.gmail.com",
