--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -12,17 +12,17 @@
           "ThreadId",
           "EventId",
           "EventName",
+          "Message",
           "ExceptionMessage",
           "ExceptionStackTrace",
           "ExceptionSource"
         ],
-        "ErrorLogs": "dbo.ErrorLogs",
-        "InfoLogs": "dbo.InfoLogs"
+        "Logs": "dbo.Logs"
       },
       "LogLevel": {
         "Default": "Error",
         "Microsoft.AspNetCore": "Error",
-        "RoundTheCode.LoggerDb": "Error"
+        "Buyursa.LoggerDb": "Error"
       }
     }
   },
