--- a/StudentHelper.WebApi/appsettings.json
+++ b/StudentHelper.WebApi/appsettings.json
@@ -3,6 +3,27 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Database": {
+      "Options": {
+        "ConnectionString": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9828b_studenthelp;User Id=db_a9828b_studenthelp_admin;Password=masterpass123",
+        "LogFields": [
+          "LogLevel",
+          "ThreadId",
+          "EventId",
+          "EventName",
+          "Message",
+          "ExceptionMessage",
+          "ExceptionStackTrace",
+          "ExceptionSource"
+        ],
+        "Logs": "dbo.Logs"
+      },
+      "LogLevel": {
+        "Default": "Error",
+        "Microsoft.AspNetCore": "Error",
+        "Buyursa.LoggerDb": "Error"
+      }
     }
   },
   "AllowedHosts": "*",
